--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "less-loader": "^2.2.3",
     "object-assign": "^4.1.0",
     "vue": "^1.0.21",
+    "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13"
   },
   "devDependencies": {
